# rooted

./: .gitignore  Cargo.toml  LICENSE  Readme.md  ToDo.md  Versions.md  fontguide.md
resources/: colors  template.ron  template_backup.ron  template_backup_1.ron  template_ecosystem.ron
src/: components.rs  dk.rs  dkm.rs  eco_camera.rs  eco_state.rs  forage_map.rs  game_mode.rs  main.rs  map.rs  rl_state.rs  turn_state.rs
src/components/: ai.rs  attributes.rs  entities.rs  general.rs  item_attributes.rs  messages.rs  mod.rs
src/map_builder/: automata.rs  drunkard.rs  empty.rs  full.rs  mod.rs  prefab.rs  rooms.rs  themes.rs  vornoi.rs
src/spawner/: foraging_spawner.rs  mod.rs  template.rs
src/systems/: camera_movement.rs  chasing_ai.rs  combat.rs  digging.rs  eco_entity_render.rs  eco_input.rs  eco_map_render.rs  eco_movement.rs  eco_tooltips.rs  end_input.rs  end_turn.rs  entity_render.rs  foraging_ai.rs  fov.rs  hud.rs  map_render.rs  mod.rs  movement.rs  player_input.rs  random_move_ai.rs  random_patrolling_ai.rs  ranged_ai.rs  rl_input.rs  spawning_forager.rs  spawning_fruit.rs  state_switch.rs  targeting.rs  tooltips.rs  use_items.rs
src/systems/ai/: ant_ai.rs  chasing.rs  foraging.rs  mod.rs  random_move.rs  random_patrolling.rs  ranged.rs  rat_ai.rs  spawning_equipment.rs  spawning_forager.rs  spawning_fruit.rs
src/systems/eco/: camera_movement.rs  entity_render.rs  input.rs  map_render.rs  mod.rs  movement.rs  tooltips.rs
src/systems/rl/: end_input.rs  end_turn.rs  entity_render.rs  hud.rs  input.rs  mod.rs
