[package]
name = "rooted"
version = "0.1.0"
authors = ["dwino"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.1"
legion = "=0.3.1"
serde = "=1.0.115"
ron = "=0.6.1"

[profile.release]
lto = "thin"